# easyABNT

./: main.py  pyproject.toml
src/: app.py  reference_maker.py  schemas.py  services.py
src/static/css/: style.css
src/static/html/: index.html
