[project]
name = "easy-abnt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "fastapi>=0.121.1",
    "isbnlib>=3.10.14",
    "pydantic>=2.12.4",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
